# opcua2http

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  MAINTENANCE.md  QUICKSTART.md  README.md  docker-compose.yml  main.cpp  start-test-server.ps1  vcpkg.json
.kiro/hooks/: auto-commit-changes.kiro.hook  complete-test-runner.kiro.hook
.kiro/specs/opcua-cache-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/opcua-http-bridge/: design.md  requirements.md  tasks.md
.kiro/specs/reconnection-server-restart-fix/: FINAL-SUMMARY.md  design.md  requirements.md  review-findings.md  tasks.md  test-results.md
.kiro/steering/: development-practices.md  development-workflow.md  product.md  structure.md  tech.md  testing-best-practices.md
examples/: config_template.env
include/cache/: CacheManager.h  CacheMemoryManager.h  CacheMetrics.h  CacheStatistics.h  PerformanceMonitor.h
include/config/: Configuration.h
include/core/: BackgroundUpdater.h  CacheErrorHandler.h  ErrorHandler.h  IBackgroundUpdater.h  OPCUAHTTPBridge.h  OPCUALogBridge.h  ReadResult.h  ReadStrategy.h
include/http/: APIHandler.h
include/opcua/: OPCUAClient.h
include/reconnection/: ReconnectionManager.h
include/subscription/: SubscriptionManager.h
src/cache/: CacheManager.cpp  CacheMemoryManager.cpp  CacheMetrics.cpp  PerformanceMonitor.cpp
src/config/: Configuration.cpp
src/core/: BackgroundUpdater.cpp  CacheErrorHandler.cpp  ErrorHandler.cpp  OPCUAHTTPBridge.cpp  OPCUALogBridge.cpp  ReadStrategy.cpp
src/http/: APIHandler.cpp
src/opcua/: OPCUAClient.cpp
src/reconnection/: ReconnectionManager.cpp
src/subscription/: SubscriptionManager.cpp
test-html/: README.md  opcua-test.html
tests/: OPTIMIZATION_SUMMARY.md  README.md  STRUCTURE_CLEANUP.md  test_main.cpp
tests/common/: GlobalTestEnvironment.h  MockOPCUAServer.cpp  MockOPCUAServer.h  OPCUATestBase.cpp  OPCUATestBase.h
tests/integration/: test_end_to_end.cpp  test_reconnection_server_restart.cpp
tests/unit/: test_api_handler.cpp  test_background_updater.cpp  test_cache_manager.cpp  test_error_handler.cpp  test_opcua_client.cpp  test_opcua_log_bridge.cpp  test_performance.cpp  test_read_strategy.cpp  test_reconnection_manager.cpp  test_subscription_manager.cpp
